--- a/webapiart/pom.xml
+++ b/webapiart/pom.xml
@@ -20,6 +20,21 @@
 
         <dependency>
             <groupId>boot.art</groupId>
+            <artifactId>dao.art</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>boot.art</groupId>
+            <artifactId>model.art</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>boot.art</groupId>
+            <artifactId>common.art</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>boot.art</groupId>
             <artifactId>service.art</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
