--- a/webapiart/pom.xml
+++ b/webapiart/pom.xml
@@ -23,6 +23,16 @@
             <artifactId>service.art</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>boot.art</groupId>
+            <artifactId>dao.art</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>boot.art</groupId>
+            <artifactId>model.art</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
